--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/datetimepicker": "^8.4.5",
@@ -22,6 +23,7 @@
     "@react-navigation/native-stack": "^7.3.26",
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
+    "mitt": "^3.0.1",
     "moment": "^2.30.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
