update boost funclity

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^23.3.1",
     "@react-native-firebase/firestore": "^23.3.1",
     "@react-native-firebase/messaging": "^23.3.1",
@@ -38,6 +39,7 @@
     "react-native-otp-entry": "^1.8.5",
     "react-native-pager-view": "^6.7.1",
     "react-native-progress": "^5.0.1",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
